## CSSC's docs/Makefile.am.

info_TEXINFOS = cssc.texi 
cssc_TEXINFOS = gpl-3.0.texi

EXTRA_DIST = BUGS FIXED TODO CREDITS TESTING \
	missing.txt patches.txt \
	Platforms mailing-list.txt style.txt \
	texinfo.tex \
	.ispell_english

# The .ispell_english file is included in the distribution because it
# is useful for the list of correct spellings in this document to
# accompany the document itself.
