## CSSC's docs/Makefile.am.

info_TEXINFOS = cssc.texi
cssc_TEXINFOS = gpl-3.0.texi fdl.texi
dist_man1_MANS = sccs.1

EXTRA_DIST = BUGS TODO TESTING \
	missing.txt patches.txt \
	Platforms mailing-list.txt style.txt \
	sccs.me \
	.ispell_english

# The .ispell_english file is included in the distribution because it
# is useful for the list of correct spellings in this document to
# accompany the document itself.
