dnl Process this file with autoconf to produce a configure script.

dnl Initialise.   Look for lndir.c to double-check that we are looking
dnl at the correct directory.
AC_INIT(lndir.c)
dnl AC_CONFIG_HEADER(aconf.h)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for header files.
AC_CHECK_HEADERS(stdarg.h stdlib.h string.h stdio.h errno.h)
AC_CHECK_HEADERS(unistd.h sys/stat.h sys/param.h)
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_HEADER_STAT



AC_CHECK_FUNCS(symlink readlink)



AC_OUTPUT(Makefile)



